--- a/css/styles.css
+++ b/css/styles.css
@@ -1,24 +1,24 @@
 body *{
     font-family: 'Open Sans', sans-serif;
   }
-
-
   
   h1 {
     font-weight: 900;
   }
   
   body {
-    background-color: lightgray;
+    background-color: #93E9BE;
   }
   
   .page {
-    width: 550px;
+    width: 700px;
     background-color: white;
     margin: auto;
     padding: 70px;
     padding-top: 35px;
     padding-bottom: 35px;
+    margin-top: 35px;
+    margin-bottom: 35px;
   }
   
   .vis-container {
@@ -39,7 +39,7 @@ body *{
   }
   
   .pure-g {
-    margin-bottom: 40px;
+    margin-bottom: 20px;
   }
   
   .small-font {
